set up the navbar collapsing made functions added files to the html fixed several type leyout issues made typing for wider screens (excluded iphonex landscape)

--- a/src/scss/0_settings/_01_variables.scss
+++ b/src/scss/0_settings/_01_variables.scss
@@ -34,6 +34,7 @@ $fullhd:                    2000px;
 // transition
 $mouse-in:                  0.25s ease-out;
 $mouse-out:                 0.4s ease-in-out;
+$navbar-scroll:             0.8s ease-in-out;
 
 // z-index:
 $z-popup:                   1000;
