--- a/src/scss/1_components/mainpage/_mainpage.scss
+++ b/src/scss/1_components/mainpage/_mainpage.scss
@@ -9,20 +9,27 @@
     padding-right: 0.25rem;
     min-height: 100%;
 
+    @media (min-width: $phablet) {
+      padding-right: 0.5rem;
+    }
+
     @media (min-width: $tablet) {
-      min-height: $phablet;
       padding-left: 1.25rem;
     }
 
-    @media (min-width: $desktop) {
+    @media (min-width: $tablet) and (orientation: portrait) {
+      min-height: $mobile;
+    }
+
+    @media (min-width: $desktop) and (orientation: portrait) {
       min-height: $phablet;
       padding-left: 0.25rem;
-      padding-right: 0.5rem;
     }
 
     @media (min-width: $desktop) and (orientation: landscape) {
       min-height: 100%;
       width: 65%;
+      padding-left: 0.25rem;
     }
 
     @media (min-width: $desktophd) and (orientation: landscape) {
@@ -36,18 +43,28 @@
       position: fixed;
       top: 0;
       left: 0;
+      width: 100%;
       padding-top: 1.2rem;
       padding-left: 0.25rem;
       padding-right: 0.25rem;
       padding-bottom: 1.25rem;
-      transition: top $mouse-out;
+      transition: top $navbar-scroll;
       z-index: $z-bar;
       background: $color-light url("../img/bg-noise-300x300.png") repeat;
 
-      & .is-collapsed {top: -3.5rem;}
+      &.is-collapsed {top: -4rem;}
+
+      @media (min-width: $phablet) {
+        width: 100%;
+        margin-top: 0;
+        padding-top: 1.2rem;
+        padding-bottom: 4.3rem;
+        &.is-collapsed {top: -7rem;}
+      }
 
       @media (min-width: $tablet) {
         padding-left: 1.25rem;
+        padding-right: 1.25rem;
       }
 
       @media (min-width: $desktop) {
@@ -57,42 +74,44 @@
     }
   }
 
+  &__slogan {
+    @media (min-width: $phablet) and (max-width: $tablet) and (orientation: landscape) {
+      z-index: $z-overlay;
+    }
+  }
+
   &__navbar {
     .js & {
       position: fixed;
-      right: 0em;
+      right: 0;
       top: 0;
-      height: auto;
+      height: 100%;
       padding-top: 1.25rem;
       padding-left: 0.25rem;
       padding-right: 0.25rem;
-      transition: right $mouse-out;
+      transition: right $navbar-scroll;
       z-index: $z-bar;
+      background: $color-light url("../img/bg-noise-300x300.png") repeat;
 
-      & .is-collapsed {right: -6.75em;}
+      &.is-collapsed {right: -10em;}
 
-      @media (min-width: $mobile) and (min-height: $tablet) {
+      @media (min-width: $phablet) {
+        padding-right: 0.5rem;
         height: auto;
-
-        & .is-collapsed {height: 0;}
-      }
-      @media (min-width: $tablet) {
-        height: auto;
-
-        & .is-collapsed {height: 0;}
+        background: none;
       }
 
       @media (min-width: $desktop) and (orientation: landscape) {
         height: auto;
         right: 35%;
 
-        & .is-collapsed {right: calc(35% - 6.75em);}
+        &.is-collapsed {right: calc(35% - 6.75em);}
       }
 
       @media (min-width: $desktophd) and (orientation: landscape) {
         right: calc(100% - 46.55rem);
 
-        & .is-collapsed {right: calc(100% - 53.3rem);}
+        &.is-collapsed {right: calc(100% - 53.3rem);}
       }
     }
   }
@@ -101,9 +120,10 @@
     .js & {
       position: fixed;
       bottom: 0;
+      transition: bottom $navbar-scroll;
       z-index: $z-bar;
 
-      & .is-collapsed {bottom: -16rem}
+      &.is-collapsed {bottom: -6rem}
     }
   }
 
